product page fixed

--- a/product.html
+++ b/product.html
@@ -168,7 +168,7 @@
 
 		<main>
 			<!-- product section start -->
-			<section class="section product-section">
+			<section class="product-section">
 				<div class="brand-icon">
 					<img src="./assets/images/brand-icon.png" alt="brand-icon.png">
 				</div>
@@ -182,16 +182,16 @@
 							</div>
 						</div>
 						<div class="product-content-area">
-						<div class="single-product-content-top">
-							<h2 class="product-title">potisse embroidery white tee</h2>
-							<div class="product-price-wrap">
-								<h6 class="latest-price"><strong>€99</strong></h6>
+							<div class="single-product-content-top">
+								<h2 class="product-title">potisse embroidery white tee</h2>
+								<div class="product-price-wrap">
+									<h6 class="latest-price"><strong>€99</strong></h6>
+								</div>
 							</div>
-						</div>
 							<div class="product-varient">
 								<div class="product-varient-title-wrap">
 									<h6 class="product-varient-title"><strong>Size:</strong><strong>large</strong></h6>
-									<button class="product-varient-popup-btn measurement-guide-modal-btn">Size guide<svg
+									<button class="product-varient-popup-btn size-guide-popup-btn">Size guide<svg
 											xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80"
 											height="18" viewBox="0 0 113 18">
 											<image id="Capa_31_Imagen" data-name="Capa 31 Imagen" width="113" height="18"
@@ -280,177 +280,101 @@
 								</div>
 							</div>
 							<div class="product-desription-link-wrap">
-							<a href="#" class="product-desription-link">+ payment methods +</a>
-							<a href="#" class="product-desription-link">+ shipping & returns +</a>
+								<a href="#" class="product-desription-link">+ payment methods +</a>
+								<a href="#" class="product-desription-link">+ shipping & returns +</a>
 							</div>
-							<div class="product-description-accordion">
-								<div class="product-accordion-items">
-									<div class="product-accordion-item">
-										<div class="item-title-wrapper product-accordion-toggle-btn">
-											<h6 class="item-title">Product Details</h6>
-											<span class="icon">
-												<span class="plus-icon">
-													<i class="fa-solid fa-plus"></i>
-												</span>
-												<span class="minus-icon">
-													<i class="fa-solid fa-minus"></i>
-												</span>
-											</span>
-										</div>
-										<div class="product-accordion-item-content">
-											<div class="content">
-												<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum eligendi nemo odio.
-													Perspiciatis neque ipsum rem ducimus porro autem consequuntur.</p>
-											</div>
-											<ul>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-											</ul>
-										</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- size-guide-modal start -->
+			<div class="product-details-wrapper size-guide-popup">
+				<div class="product-details-page-icon">
+					<img src="./assets/images/brand-icon.png" alt="brand-icon.png">
+				</div>
+				<span class="size-guide-modal-close-btn modal-close-btn">close</span>
+				<div class="container">
+					<div class="product-details-inner">
+						<div class="product-details-img">
+							<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+						</div>
+						<div class="product-details-content">
+							<div class="product-size-content-inner">
+								<h3 class="product-size-content-title">REGULAR FIT</h3>
+								<div class="product-size-content-wrap">
+									<div class="product-size-content-img">
+										<img src="./assets/images/modal-size-img.png" alt="modal-size-img.png">
 									</div>
-									<div class="product-accordion-item">
-										<div class="item-title-wrapper product-accordion-toggle-btn">
-											<h6 class="item-title">Payment Methods</h6>
-											<span class="icon">
-												<span class="plus-icon">
-													<i class="fa-solid fa-plus"></i>
-												</span>
-												<span class="minus-icon">
-													<i class="fa-solid fa-minus"></i>
-												</span>
-											</span>
-										</div>
-										<div class="product-accordion-item-content">
-											<div class="content">
-												<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum eligendi nemo odio.
-													Perspiciatis neque ipsum rem ducimus porro autem consequuntur.</p>
-											</div>
-											<ul>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<div class="product-accordion-item">
-										<div class="item-title-wrapper product-accordion-toggle-btn">
-											<h6 class="item-title">Shipping & Returns</h6>
-											<span class="icon">
-												<span class="plus-icon">
-													<i class="fa-solid fa-plus"></i>
-												</span>
-												<span class="minus-icon">
-													<i class="fa-solid fa-minus"></i>
-												</span>
-											</span>
-										</div>
-										<div class="product-accordion-item-content">
-											<div class="content">
-												<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum eligendi nemo odio.
-													Perspiciatis neque ipsum rem ducimus porro autem consequuntur.</p>
-											</div>
-											<ul>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-												<li>
-													<p>Lorem ipsum dolor sit amet.</p>
-												</li>
-											</ul>
-										</div>
+									<div class="product-size-content">
+										<p> A classic, comfortable fit that’s neither too tight nor too loose. Designed for a relaxed yet
+											stylish look, it offers the perfect balance of comfort and structure. We recommend choosing your
+											usual size for the best fit."</p>
+										<ul>
+											<li>
+												<p>🔹(A):Chest width measured from armpit to armpit.
+												</p>
+											</li>
+											<li>
+												<p>🔹(B):Measure from the Highest shoulder point in a straight line down to the hem.
+												</p>
+											</li>
+										</ul>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</section>
-			<!-- masurement-gidue modal -->
-			<div class="masurement-modal">
-				<div class="masurement-modal-content">
-					<div class="modal-content-top">
-						<span class="modal-close-button"><i class="fa-solid fa-xmark"></i></span>
-					</div>
-					<div class="modal-content-body">
-						<h4 class="modal-content-title">OVERSIZED FIT</h4>
-						<div class="modal-content-inner">
-						<div class="modal-content-img">
-							<img src="./assets/images/modal-size-img.png" alt="modal-size-img.png">
+			</div>
+			<!-- size-guide-modal end -->
+
+			<!-- product-details-modal start -->
+			<div class="product-details-wrapper product-details-popup">
+				<div class="product-details-page-icon">
+					<img src="./assets/images/brand-icon.png" alt="brand-icon.png">
+				</div>
+				<span class="product-details-modal-close-btn modal-close-btn">close</span>
+				<div class="container">
+					<div class="product-details-inner">
+						<div class="product-details-img">
+							<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
 						</div>
-						<div class="modal-content">
-							<p> Trendy comfort: The perfect oversized T-shirt for a laid-back vibe, featuring a roomy design, soft fabric, and an urban touch that elevates your outfit.</p>
-							<ul>
-								<li>
-									<p>🔹(A):Chest width measured from armpit to armpit.
-									</p>
-								</li>
-								<li>
-									<p>🔹(B):Measure from the Highest shoulder point in a straight line down to the hem.
-									</p>
-								</li>
-							</ul>
+						<div class="product-details-content">
+							<div class="product-details-content-inner">
+								<h3 class="product-details-content-heading">product details</h3>
+								<h5 class="product-details-content-title">potisse embroidery white tee</h5>
+								<p class="product-details-content-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+									Similique quam laudantium aperiam deleniti ipsum culpa ratione quae dolorum laborum exercitationem.
+								</p>
+								<ul>
+									<li>
+										<p>Lorem ipsum dolor sit amet.</p>
+									</li>
+									<li>
+										<p>Ut quia at assumenda corporis alias maxime dignissimos illum minima!</p>
+									</li>
+									<li>
+										<p>Mollitia laboriosam porro repellendus, itaque vitae aut quasi.</p>
+									</li>
+									<li>
+										<p>Et iusto debitis, vitae enim aperiam sit.</p>
+									</li>
+									<li>
+										<p>Quaerat cupiditate cumque nam iure suscipit?</p>
+									</li>
+								</ul>
+								<p class="product-details-size-text">
+									Model is wearing size M
+								</p>
+								<div class="product-details-page-logo">
+									<img src="./assets/images/mini-logo.png" alt="mini-logo.png">
+								</div>
+							</div>
 						</div>
-						</div>
-						<table class="measurement-guide-content">
-							<thead>
-								<tr>
-									<th>Size</th>
-									<th>Length (B)</th>
-									<th>Chest (A)</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td><strong>M</strong></td>
-									<td>27"</td>
-									<td>38"</td>
-								</tr>
-								<tr>
-									<td><strong>L</strong></td>
-									<td>28"</td>
-									<td>40"</td>
-								</tr>
-								<tr>
-									<td><strong>XL</strong></td>
-									<td>29"</td>
-									<td>42"</td>
-								</tr>
-								<tr>
-									<td><strong>XXl</strong></td>
-									<td>30"</td>
-									<td>45"</td>
-								</tr>
-							</tbody>
-						</table>
 					</div>
 				</div>
 			</div>
-			<!-- masurement-gidue modal -->
+			<!-- product-details-modal end -->
 			<!-- product section end -->
 
 			<!-- related-product section start -->
