product popup responsive, privacy, payment, refund, account, log in page created

--- a/account.html
+++ b/account.html
@@ -4,14 +4,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Shipping & Refund</title>
+		<title>Create account</title>
 		<!-- link css start -->
 		<link rel="stylesheet" href="assets/css/all.min.css">
 		<link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
 		<link rel="stylesheet" href="./assets/css/cart.css">
 		<link rel="stylesheet" href="./assets/css/card.css">
-		<link rel="stylesheet" href="./assets/css/single-banner-section.css">
-		<link rel="stylesheet" href="./assets/css/article-section.css">
+		<link rel="stylesheet" href="./assets/css/contact.css">
 		<link rel="stylesheet" href="./assets/css/main.css">
 		<!-- link css end -->
 	</head>
@@ -164,78 +163,62 @@
 		</header>
 
 		<main>
-			<!-- article-section css start -->
-			<section class="section article-section">
+			<!-- contact-section css start -->
+			<section class="section contact-section account-section">
 				<div class="container">
 					<div class="section-heading-wrapper">
-						<h2 class="section-heading">SHIPPING & RETURNS / EXCHANGE POLICY</h2>
+						<h2 class="section-heading">CREATE ACCOUNT</h2>
 					</div>
-					<div class="article-content-wrapper">
-						<div class="article-content">
-							<p>At our store, we want you to be completely satisfied with your purchase. Therefore, we offer the
-								possibility of exchanges or returns under the following conditions:
-							</p>
-							<strong>✅ Return Conditions</strong>
-							<ul>
-								<li>
-									<p>The item must be in perfect condition, unused, and without any signs of wear.
-									</p>
-								</li>
-								<li>
-									<p>It must include all tags, packaging, and any other elements that were part of the original package.
-									</p>
-								</li>
-								<li>
-									<p>The return request must be made within the established period from the date of receipt of the
-										order.
-									</p>
-								</li>
-							</ul>
+					<div class="contact-wrapper">
+						<div class="contact-items">
+							<div class="contact-item-wrap">
+								<div class="contact-item">
+									<input type="text" placeholder="First Name*">
+								</div>
+							</div>
+							<div class="contact-item-wrap">
+							<div class="contact-item">
+								<input type="text" placeholder="Last Name*">
+							</div>
 						</div>
-						<div class="article-content">
-							<strong>🚫 Reasons for Return Rejection</strong>
-							<ul>
-								<li>
-									<p>If the returned product shows signs of use, dirt, or any alterations indicating that it has been
-										worn, the return will be automatically rejected, and the product will be sent back to the customer.
-									</p>
-								</li>
-							</ul>
+						<div class="contact-item-wrap">
+							<div class="contact-item">
+								<input type="email" placeholder="E-mail*">
+							</div>
 						</div>
-						<div class="article-content">
-							<strong>🚚 Return Shipping Costs</strong>
-							<ul>
-								<li>
-									<p>Return shipping costs will be covered by the customer, unless the return is due to a size exchange,
-										in which case shipping will be free of charge.
-									</p>
-								</li>
-							</ul>
+						<div class="contact-item-wrap">
+							<div class="contact-item">
+								<input type="text" placeholder="Country*">
+							</div>
 						</div>
-						<div class="article-content">
-							<strong>💰 Refunds</strong>
-							<ul>
-								<li>
-									<p>In the case of returns, we will refund the amount of the product, but shipping costs will not be
-										refunded.
-									</p>
-								</li>
-								<li>
-									<p>If you have any questions about our return policy, feel free to contact us. We’ll be happy to
-										assist you.
-									</p>
-								</li>
-							</ul>
+						<div class="contact-item-wrap">
+							<div class="contact-item text-align-left">
+								<input type="password" placeholder="Password*">
+								<span class="input-field-btn">show</span>
+							</div>
+							<p>Password must be at least 8 characters, with 1 number and 1 uppercase letter</p>
+						</div>
+							<div class="contact-item text-align-left">
+								<input type="date" placeholder="Day of Brith*">
+							</div>
+						</div>
+						<div class="contact-checkbox-area">
+								<div class="contact-checkbox-field">
+									<input type="checkbox" id="checkbox1">
+									<label for="checkbox1">I want to receive news, updates, and exclusive offers from Potisse</label>
+								</div>
+								<div class="contact-checkbox-field">
+									<input type="checkbox" id="checkbox2">
+									<label for="checkbox2">I accept the terms and conditions and the privacy policy*</label>
+								</div>
+						</div>
+						<div class="contact-btn">
+							<a href="#" class="btn primary-btn">CREATE YOUR STORY ON POTISSE <span></span></a>
 						</div>
 					</div>
 				</div>
 			</section>
-			<!-- article-section css end -->
-
-			<!-- sngle-banner section start -->
-			<section class="single-banner-section">
-			</section>
-			<!-- sngle-banner section end -->
+			<!-- contact-section css end -->
 		</main>
 
 		<!-- footer section start -->
