--- a/article2.html
+++ b/article2.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Shipping & Refund</title>
+		<title>Privacy</title>
 		<!-- link css start -->
 		<link rel="stylesheet" href="assets/css/all.min.css">
 		<link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
@@ -168,61 +168,45 @@
 			<section class="section article-section">
 				<div class="container">
 					<div class="section-heading-wrapper">
-						<h2 class="section-heading">SHIPPING & RETURNS / EXCHANGE POLICY</h2>
+						<h2 class="section-heading">PRIVACY POLICY</h2>
 					</div>
 					<div class="article-content-wrapper">
-						<div class="article-content">
-							<p>At our store, we want you to be completely satisfied with your purchase. Therefore, we offer the
-								possibility of exchanges or returns under the following conditions:
-							</p>
-							<strong>✅ Return Conditions</strong>
+						<div class="article-content privacy-policy-item">
+							<strong>Privacy Policy</strong>
 							<ul>
 								<li>
-									<p>The item must be in perfect condition, unused, and without any signs of wear.
-									</p>
-								</li>
-								<li>
-									<p>It must include all tags, packaging, and any other elements that were part of the original package.
-									</p>
-								</li>
-								<li>
-									<p>The return request must be made within the established period from the date of receipt of the
-										order.
+									<p>This Privacy Policy describes how POTISSE (hereinafter, the "Site," "we," or "our") collects, uses, and discloses your personal information when you visit or use our services, make a purchase on potisse.com (hereinafter, the "Site"), or otherwise communicate with us regarding the Site (collectively referred to as the "Services"). For purposes of this Privacy Policy, the terms "you" and "your" refer to you as a user of the Services, whether as a customer, website visitor, or any other individual whose information we have collected under this Privacy Policy.
 									</p>
 								</li>
 							</ul>
 						</div>
-						<div class="article-content">
-							<strong>🚫 Reasons for Return Rejection</strong>
+						<div class="article-content privacy-policy-item">
+							<strong>Please read this Privacy Policy carefully.</strong>
 							<ul>
 								<li>
-									<p>If the returned product shows signs of use, dirt, or any alterations indicating that it has been
-										worn, the return will be automatically rejected, and the product will be sent back to the customer.
+									<p>We may update this Privacy Policy from time to time to reflect changes in our practices or for operational, legal, or regulatory reasons. We will post the revised Privacy Policy on the Site, update the "Last Updated" date, and take any other steps required by applicable law.
 									</p>
 								</li>
 							</ul>
 						</div>
-						<div class="article-content">
-							<strong>🚚 Return Shipping Costs</strong>
+						<div class="article-content privacy-policy-item">
+							<strong>Collection and Use of Your Personal Information</strong>
 							<ul>
 								<li>
-									<p>Return shipping costs will be covered by the customer, unless the return is due to a size exchange,
-										in which case shipping will be free of charge.
+									<p>To provide the Services, we collect personal information about you from a variety of sources, as outlined below. The information we collect and use depends on how you interact with us.
+									</p>
+								</li>
+								<li>
+									<p>In addition to the specific uses set out below, we may use the information we collect to communicate with you, provide or improve the Services, comply with any applicable legal obligations, enforce applicable service terms, and protect or defend the Services, our rights, the rights of our users, or others.
 									</p>
 								</li>
 							</ul>
 						</div>
-						<div class="article-content">
-							<strong>💰 Refunds</strong>
+						<div class="article-content privacy-policy-item">
+							<strong>Personal Information We Collect</strong>
 							<ul>
 								<li>
-									<p>In the case of returns, we will refund the amount of the product, but shipping costs will not be
-										refunded.
-									</p>
-								</li>
-								<li>
-									<p>If you have any questions about our return policy, feel free to contact us. We’ll be happy to
-										assist you.
+									<p>The types of personal information we obtain about you depend on how you interact with our Site and use our Services. The term "personal information" refers to information that identifies or describes you individually, as well as information that can be linked or associated with you. The following sections describe the categories and specific types of personal information we collect.
 									</p>
 								</li>
 							</ul>
