--- a/article3.html
+++ b/article3.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Shipping & Refund</title>
+		<title>Payment Methods</title>
 		<!-- link css start -->
 		<link rel="stylesheet" href="assets/css/all.min.css">
 		<link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
@@ -168,65 +168,40 @@
 			<section class="section article-section">
 				<div class="container">
 					<div class="section-heading-wrapper">
-						<h2 class="section-heading">SHIPPING & RETURNS / EXCHANGE POLICY</h2>
+						<h2 class="section-heading">PAYMENT METHODS</h2>
 					</div>
 					<div class="article-content-wrapper">
 						<div class="article-content">
-							<p>At our store, we want you to be completely satisfied with your purchase. Therefore, we offer the
-								possibility of exchanges or returns under the following conditions:
+							<strong>Accepted Payment Methods:</strong>
+							<p>In our store, we offer multiple secure and reliable payment options to ensure a smooth and convenient shopping experience. You can choose from the following methods:
 							</p>
-							<strong>✅ Return Conditions</strong>
-							<ul>
-								<li>
-									<p>The item must be in perfect condition, unused, and without any signs of wear.
-									</p>
-								</li>
-								<li>
-									<p>It must include all tags, packaging, and any other elements that were part of the original package.
-									</p>
-								</li>
-								<li>
-									<p>The return request must be made within the established period from the date of receipt of the
-										order.
-									</p>
-								</li>
-							</ul>
 						</div>
 						<div class="article-content">
-							<strong>🚫 Reasons for Return Rejection</strong>
-							<ul>
-								<li>
-									<p>If the returned product shows signs of use, dirt, or any alterations indicating that it has been
-										worn, the return will be automatically rejected, and the product will be sent back to the customer.
-									</p>
-								</li>
-							</ul>
+							<strong>💳 Credit and Debit Cards</strong>
+							<p>We accept major cards, including Visa, Mastercard, American Express, and Maestro, allowing you to complete your purchase quickly and securely.
+							</p>
 						</div>
 						<div class="article-content">
-							<strong>🚚 Return Shipping Costs</strong>
-							<ul>
-								<li>
-									<p>Return shipping costs will be covered by the customer, unless the return is due to a size exchange,
-										in which case shipping will be free of charge.
-									</p>
-								</li>
-							</ul>
+							<strong>💰 PayPal Payments</strong>
+							<p>For a more flexible option, you can pay with PayPal, enabling transactions without sharing your card details.
+							</p>
 						</div>
 						<div class="article-content">
-							<strong>💰 Refunds</strong>
-							<ul>
-								<li>
-									<p>In the case of returns, we will refund the amount of the product, but shipping costs will not be
-										refunded.
-									</p>
-								</li>
-								<li>
-									<p>If you have any questions about our return policy, feel free to contact us. We’ll be happy to
-										assist you.
-									</p>
-								</li>
-							</ul>
+							<strong>📲 Digital Payments</strong>
+							<p>We accept Apple Pay and Google Pay for an even faster checkout experience on your mobile device.
+							</p>
 						</div>
+						<div class="article-content">
+							<strong>🔒 Guaranteed Security</strong>
+							<p>All our payment methods are protected with encryption technology to ensure maximum security in every transaction.
+							</p>
+						</div>
+					</div>
+					<div class="payment-img">
+						<img src="./assets/images/PAYMENT METHODS Imagen.png" alt="PAYMENT METHODS Imagen.png">
+					</div>
+					<div class="brand-icon">
+						<img src="./assets/images/mini-logo.png" alt="mini-logo.png">
 					</div>
 				</div>
 			</section>
