--- a/product.html
+++ b/product.html
@@ -8,7 +8,6 @@
 		<!-- link css start -->
 		<link rel="stylesheet" href="assets/css/all.min.css">
 		<link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
-		<link rel="stylesheet" href="./assets/css/animate.min.css">
 		<link rel="stylesheet" href="./assets/css/cart.css">
 		<link rel="stylesheet" href="./assets/css/card.css">
 		<link rel="stylesheet" href="./assets/css/product.css">
@@ -57,10 +56,10 @@
 										<a href="collections.html">Collections</a>
 									</li>
 									<li>
-										<a href="product.html">Product</a>
+										<a href="collections2.html">Collections2</a>
 									</li>
 									<li>
-										<a href="#">Contact</a>
+										<a href="product.html">Product</a>
 									</li>
 									<li>
 										<span class="dropdown-btn">Pages <span class="icon"><i
@@ -68,25 +67,22 @@
 										<div class="sub-menu">
 											<ul>
 												<li>
-													<a href="#">About us</a>
-												</li>
-												<li>
 													<a href="cart.html">Cart</a>
 												</li>
 												<li>
-													<a href="#">Blog</a>
+													<a href="account.html">Account</a>
 												</li>
 												<li>
-													<a href="#">Blog Single</a>
+													<a href="login.html">Login</a>
 												</li>
 												<li>
-													<a href="#">Faq</a>
+													<a href="article3.html">Payment</a>
 												</li>
 												<li>
-													<a href="#">Privacy & policy</a>
+													<a href="article2.html">Privacy & policy</a>
 												</li>
 												<li>
-													<a href="#">Refund Policy</a>
+													<a href="article.html">Refund Policy</a>
 												</li>
 											</ul>
 										</div>
@@ -319,6 +315,12 @@
 												</p>
 											</li>
 										</ul>
+									</div>
+								</div>
+								<div class="size-chat-area">
+									<h6 class="size-chat-title">size chat</h6>
+									<div class="size-chat-img">
+										<img src="./assets/images/size-chat1.png" alt="size-chat1.png">
 									</div>
 								</div>
 							</div>
@@ -906,8 +908,6 @@
 		<!-- js link start-->
 		<script src="./assets/js/jquery-3.7.1.min.js"></script>
 		<script src="./assets/js/swiper-bundle.min.js"></script>
-		<script src="./assets/js/jquery.nicescroll.min.js"></script>
-		<script src="./assets/js/wow.min.js"></script>
 		<script src="./assets/js/script.js"></script>
 		<!-- js link end-->
 	</body>
