added product popup box created

--- a/account.html
+++ b/account.html
@@ -62,6 +62,9 @@
 										<a href="product.html">Product</a>
 									</li>
 									<li>
+										<a href="product2.html">Product2</a>
+									</li>
+									<li>
 										<span class="dropdown-btn">Pages <span class="icon"><i
 													class="fa-solid fa-angle-down"></i></span></span>
 										<div class="sub-menu">
