--- a/product2.html
+++ b/product2.html
@@ -382,6 +382,30 @@
 			<!-- product-details-modal end -->
 			<!-- product section end -->
 
+			<!-- added product popup start -->
+			<div class="added-product-popup-box">
+				<div class="added-product-popup-box-inner">
+					<div class="added-product-popup-title-wrap">
+						<div class="added-product-popup-title">
+							<span class="icon">
+								<img src="./assets/images/checkmark.png" alt="checkmark.png">
+							</span>
+							<p>added to your shopping bag</p>
+						</div>
+						<span class="added-product-popup-close-btn">
+							<img src="./assets/images/cross.png" alt="cross.png">
+						</span>
+					</div>
+					<div class="added-product-img">
+						<img src="./assets/images/added-product-img.png" alt="added-product-img.png">
+					</div>
+					<div class="added-product-btn">
+						<a href="#" class="btn primary-btn">view shopping bag (3) <span></span></a>
+					</div>
+				</div>
+			</div>
+			<!-- added product popup end -->
+
 			<!-- related-product section start -->
 			<section class="section related-product-section">
 				<div class="container">
@@ -586,7 +610,7 @@
 			<!-- cart-sidebar start -->
 			<div class="cart-sidebar">
 				<button class="cart-sidebar-close-window-btn"></button>
-				<div class="cart-sidebar-box active">
+				<div class="cart-sidebar-box">
 					<div class="side-cart-top">
 						<p class="side-cart-heading">YOUR CART</p>
 						<div class="side-cart-heading-icon-wrap">
