updated product single section with swiper zoom slider

--- a/product.html
+++ b/product.html
@@ -174,9 +174,76 @@
 				<div class="container">
 					<div class="product-page-content-wrap">
 						<div class="product-img-area">
-							<div class="single-product-img-items">
-								<div class="single-product-img-item">
-									<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+							<button class="slider-zoom-close-btn">
+								<img src="./assets/images/cross.png" alt="cross.png">
+							</button>
+							<div class="swiper product-single-slider">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<div class="product-single-img-item slider-zoom-btn swiper-zoom-container">
+											<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product-single-img-item slider-zoom-btn swiper-zoom-container">
+											<img src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product-single-img-item slider-zoom-btn swiper-zoom-container">
+											<img src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product-single-img-item slider-zoom-btn swiper-zoom-container">
+											<img src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product-single-img-item slider-zoom-btn swiper-zoom-container">
+											<img src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product-single-img-item slider-zoom-btn swiper-zoom-container">
+											<img src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
+										</div>
+									</div>
+								</div>
+								   <div class="swiper-pagination"></div>
+							</div>
+							<div thumbsSlider="" class="swiper product-single-thumb-slider">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<div class="product-single-img-item">
+											<img src="./assets/images/collection-img1.jpg" alt="collection-img1.jpg">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product-single-img-item">
+											<img src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product-single-img-item">
+											<img src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product-single-img-item">
+											<img src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product-single-img-item">
+											<img src="./assets/images/collection-img3.jpg" alt="collection-img3.jpg">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product-single-img-item">
+											<img src="./assets/images/collection-img2.jpg" alt="collection-img2.jpg">
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -286,6 +353,7 @@
 					</div>
 				</div>
 			</section>
+
 			<!-- size-guide-modal start -->
 			<div class="product-details-wrapper size-guide-popup">
 				<div class="product-details-page-icon">
