updated slider cross icon

--- a/product.html
+++ b/product.html
@@ -175,7 +175,7 @@
 					<div class="product-page-content-wrap">
 						<div class="product-img-area">
 							<button class="slider-zoom-close-btn">
-								<img src="./assets/images/cross.png" alt="cross.png">
+								<img src="./assets/images/cross2.png" alt="cross2.png">
 							</button>
 							<div class="swiper product-single-slider">
 								<div class="swiper-wrapper">
